// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DLCList Rendering Test - Data Rendering 1`] = `
<div
  className="content-container"
>
  <ReactTable
    AggregatedComponent={[Function]}
    ExpanderComponent={[Function]}
    FilterComponent={[Function]}
    LoadingComponent={[Function]}
    NoDataComponent={[Function]}
    PadRowComponent={[Function]}
    PaginationComponent={[Function]}
    PivotValueComponent={[Function]}
    ResizerComponent={[Function]}
    TableComponent={[Function]}
    TbodyComponent={[Function]}
    TdComponent={[Function]}
    TfootComponent={[Function]}
    ThComponent={[Function]}
    TheadComponent={[Function]}
    TrComponent={[Function]}
    TrGroupComponent={[Function]}
    aggregatedKey="_aggregated"
    className="-striped -highlight"
    collapseOnDataChange={true}
    collapseOnPageChange={true}
    collapseOnSortingChange={true}
    column={
      Object {
        "Aggregated": undefined,
        "Cell": undefined,
        "Expander": undefined,
        "Filter": undefined,
        "Footer": undefined,
        "Header": undefined,
        "Pivot": undefined,
        "PivotValue": undefined,
        "Placeholder": undefined,
        "aggregate": undefined,
        "className": "",
        "filterAll": false,
        "filterMethod": undefined,
        "filterable": undefined,
        "footerClassName": "",
        "footerStyle": Object {},
        "getFooterProps": [Function],
        "getHeaderProps": [Function],
        "getProps": [Function],
        "headerClassName": "",
        "headerStyle": Object {},
        "minResizeWidth": 11,
        "minWidth": 100,
        "resizable": undefined,
        "show": true,
        "sortMethod": undefined,
        "sortable": undefined,
        "style": Object {},
      }
    }
    columns={
      Array [
        Object {
          "Header": "DLC",
          "columns": Array [
            Object {
              "Header": "Artist Name",
              "accessor": "artist",
            },
            Object {
              "Header": "Song Name",
              "accessor": "name",
            },
            Object {
              "Header": "Lead",
              "accessor": "leadTuning",
            },
            Object {
              "Header": "Rhythm",
              "accessor": "rhythmTuning",
            },
            Object {
              "Header": "Bass",
              "accessor": "bassTuning",
            },
          ],
        },
      ]
    }
    data={
      Array [
        Object {
          "artist": "Amon Amarth",
          "bassTuning": "E Standard",
          "leadTuning": "Custom Tuning (AEADF#B)",
          "name": "Guardians of Asgaard",
          "rhythmTuning": "Custom Tuning (AEADF#B)",
        },
        Object {
          "artist": "Amon Amarth",
          "bassTuning": "E Standard",
          "leadTuning": "Custom Tuning (B Standard)",
          "name": "The Pursuit of VIkings",
          "rhythmTuning": "Custom Tuning (B Standard)",
        },
        Object {
          "artist": "Amon Amarth",
          "bassTuning": "E Standard",
          "leadTuning": "Custom Tuning (B Standard)",
          "name": "War Of The Gods",
          "rhythmTuning": "Custom Tuning (B Standard)",
        },
        Object {
          "artist": "Amon Amarth",
          "bassTuning": "E Standard",
          "leadTuning": "Custom Tuning (B Standard)",
          "name": "Twilight Of The Thunder God",
          "rhythmTuning": "Custom Tuning (B Standard)",
        },
        Object {
          "artist": "Amon Amarth",
          "bassTuning": "E Standard",
          "leadTuning": "Custom Tuning (B Standard)",
          "name": "Death In Fire",
          "rhythmTuning": "Custom Tuning (B Standard)",
        },
        Object {
          "artist": "Dethklok",
          "bassTuning": "C Standard",
          "leadTuning": "C Standard",
          "name": "Bloodlines",
          "rhythmTuning": "C Standard",
        },
        Object {
          "artist": "Dethklok",
          "bassTuning": "C Standard",
          "leadTuning": "C Standard",
          "name": "Murmaider",
          "rhythmTuning": "C Standard",
        },
        Object {
          "artist": "Dethklok",
          "bassTuning": "C Standard",
          "leadTuning": "C Standard",
          "name": "Black Fire Upon Us",
          "rhythmTuning": "C Standard",
        },
        Object {
          "artist": "Dethklok",
          "bassTuning": "C Standard",
          "leadTuning": "C Standard",
          "name": "Go Into The Water",
          "rhythmTuning": "C Standard",
        },
        Object {
          "artist": "Dethklok",
          "bassTuning": "C Standard",
          "leadTuning": "C Standard",
          "name": "Awaken",
          "rhythmTuning": "C Standard",
        },
        Object {
          "artist": "Dethklok",
          "bassTuning": "C Standard",
          "leadTuning": "C Standard",
          "name": "Thunderhorse",
          "rhythmTuning": "C Standard",
        },
      ]
    }
    defaultExpanded={Object {}}
    defaultFilterMethod={[Function]}
    defaultFiltered={Array []}
    defaultPage={0}
    defaultPageSize={10}
    defaultResized={Array []}
    defaultSortDesc={false}
    defaultSortMethod={[Function]}
    defaultSorted={Array []}
    expanderDefaults={
      Object {
        "filterable": false,
        "resizable": false,
        "sortable": false,
        "width": 35,
      }
    }
    filterable={false}
    freezeWhenExpanded={false}
    getLoadingProps={[Function]}
    getNoDataProps={[Function]}
    getPaginationProps={[Function]}
    getProps={[Function]}
    getResizerProps={[Function]}
    getTableProps={[Function]}
    getTbodyProps={[Function]}
    getTdProps={[Function]}
    getTfootProps={[Function]}
    getTfootTdProps={[Function]}
    getTfootTrProps={[Function]}
    getTheadFilterProps={[Function]}
    getTheadFilterThProps={[Function]}
    getTheadFilterTrProps={[Function]}
    getTheadGroupProps={[Function]}
    getTheadGroupThProps={[Function]}
    getTheadGroupTrProps={[Function]}
    getTheadProps={[Function]}
    getTheadThProps={[Function]}
    getTheadTrProps={[Function]}
    getTrGroupProps={[Function]}
    getTrProps={[Function]}
    groupedByPivotKey="_groupedByPivot"
    indexKey="_index"
    loading={false}
    loadingText="Loading..."
    multiSort={true}
    nestingLevelKey="_nestingLevel"
    nextText="Next"
    noDataText="No rows found"
    ofText="of"
    onFetchData={[Function]}
    originalKey="_original"
    pageJumpText="jump to page"
    pageSizeOptions={
      Array [
        5,
        10,
        20,
        25,
        50,
        100,
      ]
    }
    pageText="Page"
    pivotDefaults={Object {}}
    pivotIDKey="_pivotID"
    pivotValKey="_pivotVal"
    previousText="Previous"
    resizable={true}
    resolveData={[Function]}
    rowsSelectorText="rows per page"
    rowsText="rows"
    showPageJump={true}
    showPageSizeOptions={true}
    showPagination={true}
    showPaginationBottom={true}
    showPaginationTop={false}
    sortable={true}
    style={Object {}}
    subRowsKey="_subRows"
  />
</div>
`;

exports[`DLCList Rendering Test - No Data Rendering 1`] = `
<div
  className="content-container"
>
  <ReactTable
    AggregatedComponent={[Function]}
    ExpanderComponent={[Function]}
    FilterComponent={[Function]}
    LoadingComponent={[Function]}
    NoDataComponent={[Function]}
    PadRowComponent={[Function]}
    PaginationComponent={[Function]}
    PivotValueComponent={[Function]}
    ResizerComponent={[Function]}
    TableComponent={[Function]}
    TbodyComponent={[Function]}
    TdComponent={[Function]}
    TfootComponent={[Function]}
    ThComponent={[Function]}
    TheadComponent={[Function]}
    TrComponent={[Function]}
    TrGroupComponent={[Function]}
    aggregatedKey="_aggregated"
    className="-striped -highlight"
    collapseOnDataChange={true}
    collapseOnPageChange={true}
    collapseOnSortingChange={true}
    column={
      Object {
        "Aggregated": undefined,
        "Cell": undefined,
        "Expander": undefined,
        "Filter": undefined,
        "Footer": undefined,
        "Header": undefined,
        "Pivot": undefined,
        "PivotValue": undefined,
        "Placeholder": undefined,
        "aggregate": undefined,
        "className": "",
        "filterAll": false,
        "filterMethod": undefined,
        "filterable": undefined,
        "footerClassName": "",
        "footerStyle": Object {},
        "getFooterProps": [Function],
        "getHeaderProps": [Function],
        "getProps": [Function],
        "headerClassName": "",
        "headerStyle": Object {},
        "minResizeWidth": 11,
        "minWidth": 100,
        "resizable": undefined,
        "show": true,
        "sortMethod": undefined,
        "sortable": undefined,
        "style": Object {},
      }
    }
    columns={
      Array [
        Object {
          "Header": "DLC",
          "columns": Array [
            Object {
              "Header": "Artist Name",
              "accessor": "artist",
            },
            Object {
              "Header": "Song Name",
              "accessor": "name",
            },
            Object {
              "Header": "Lead",
              "accessor": "leadTuning",
            },
            Object {
              "Header": "Rhythm",
              "accessor": "rhythmTuning",
            },
            Object {
              "Header": "Bass",
              "accessor": "bassTuning",
            },
          ],
        },
      ]
    }
    data={Array []}
    defaultExpanded={Object {}}
    defaultFilterMethod={[Function]}
    defaultFiltered={Array []}
    defaultPage={0}
    defaultPageSize={10}
    defaultResized={Array []}
    defaultSortDesc={false}
    defaultSortMethod={[Function]}
    defaultSorted={Array []}
    expanderDefaults={
      Object {
        "filterable": false,
        "resizable": false,
        "sortable": false,
        "width": 35,
      }
    }
    filterable={false}
    freezeWhenExpanded={false}
    getLoadingProps={[Function]}
    getNoDataProps={[Function]}
    getPaginationProps={[Function]}
    getProps={[Function]}
    getResizerProps={[Function]}
    getTableProps={[Function]}
    getTbodyProps={[Function]}
    getTdProps={[Function]}
    getTfootProps={[Function]}
    getTfootTdProps={[Function]}
    getTfootTrProps={[Function]}
    getTheadFilterProps={[Function]}
    getTheadFilterThProps={[Function]}
    getTheadFilterTrProps={[Function]}
    getTheadGroupProps={[Function]}
    getTheadGroupThProps={[Function]}
    getTheadGroupTrProps={[Function]}
    getTheadProps={[Function]}
    getTheadThProps={[Function]}
    getTheadTrProps={[Function]}
    getTrGroupProps={[Function]}
    getTrProps={[Function]}
    groupedByPivotKey="_groupedByPivot"
    indexKey="_index"
    loading={false}
    loadingText="Loading..."
    multiSort={true}
    nestingLevelKey="_nestingLevel"
    nextText="Next"
    noDataText="No rows found"
    ofText="of"
    onFetchData={[Function]}
    originalKey="_original"
    pageJumpText="jump to page"
    pageSizeOptions={
      Array [
        5,
        10,
        20,
        25,
        50,
        100,
      ]
    }
    pageText="Page"
    pivotDefaults={Object {}}
    pivotIDKey="_pivotID"
    pivotValKey="_pivotVal"
    previousText="Previous"
    resizable={true}
    resolveData={[Function]}
    rowsSelectorText="rows per page"
    rowsText="rows"
    showPageJump={true}
    showPageSizeOptions={true}
    showPagination={true}
    showPaginationBottom={true}
    showPaginationTop={false}
    sortable={true}
    style={Object {}}
    subRowsKey="_subRows"
  />
</div>
`;
